--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -11,9 +11,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Qu'appelle t-on architecture modulaire}
 
-\section{Pourquoi développer une architecture modulaire}
+	
+\section{Modularité}
+
+\section{Intérêt computationnel}
 
 \section{Réseaux de neurones modulaires}
 
@@ -110,7 +112,6 @@ Les cartes de forme autre que 1D ou 2D sont moins couramment utilisées, mais pe
 \label{fig:topo}
 \end{figure}
 
-
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{som2d}
@@ -124,6 +125,8 @@ Les cartes de forme autre que 1D ou 2D sont moins couramment utilisées, mais pe
 \caption{Dépliement d'une SOM 1D sur des données dans un triangle 2D [citation]}
 \label{fig:som1d}
 \end{figure}
+
+
 
 \subsection{Mémoire associative et SOM}
 
