--- a/main.tex
+++ b/main.tex
@@ -29,12 +29,12 @@
 \usepackage{amsthm}
 \usepackage{array}
 \usepackage{url}
-\usepackage{algorithm2e}
+\usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
 %\usepackage{algorithm}
 %\usepackage{algpseudocode}
-%\SetAlCapSkip{1em}
-%\SetKwInput{KwInput}{Input}
-%\SetKwInput{KwOutput}{Output}
+\SetAlCapSkip{1em}
+\SetKwInput{KwInput}{Input}
+\SetKwInput{KwOutput}{Output}
 \usepackage{mathtools}
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
