--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,4 +1,4 @@
-\ThesisTitle{A propos des architectures de cartes auto-organisatrices stylées}
+\ThesisTitle{Auto-organisation Décentralisée Multi-Cartes}
 \ThesisDate{le plus tard possible en 2022}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
