--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -10,9 +10,6 @@
 % - réseaux de neurones
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-	
 \section{Modularité}
 
 \section{Intérêt computationnel}
@@ -28,6 +25,17 @@ Ces coactivations aient été observées expérimentalement. Plusieurs modèles 
  CDZ holds that specific cortical areas act as sets of pointers to other areas , and therefore connect several brain networks. The reentry theory hypothezise direct bidirectional exchanges between several brain areas. Those theories are a biological inspiration to create and connect modular networks.
 The models inspired by those theories are mostly based on spiking neural networks. Indeed, those networks are 
 Let us cite as example \cite{electronics9101605}}
+
+
+\section{Mémoire associative et multi-modalité}
+
+\subsection{Mémoire associative}
+Dans cette thèse, on s'intéresse à développer une mémoire associative via une architecture de cartes. La mémoire associative se définit par la capacité d'un réseau à apprendre des relations entre des ensembles de données et à pouvoir utiliser ces relations. Une tâche classique de mémoire associative sera la capacité de générer un motif en sortie à partir d'un autre motif d'entrée qui lui est associé, montrant que le réseau a appris la relation existant entre les deux éléments. 
+
+\subsection{Multimodalité}
+On parle de multimodalité lorsqu'on cherche à apprendre des relations entre données de différentes natures. Ce terme est souvent utilisé en robotique par exemple: les données issues de différents capteurs d'un robot sont les modalités. L'apprentissage multimodal cherche à apprendre ces modalités de façon commune. Ainsi, on peut effectuer un apprentissage multimodale en associant une modalité auditive consituée de signaux sonores et une modalité visuelle consituée d'images.
+Un défi de l'apprentissage multimodal vient de la nature des signaux: comment faire pour que les modalités soient traitées de façon équilibrée ? 
+%
 
 \section{Cartes auto-organisatrices}\ref{sec:som001}
 
@@ -126,10 +134,7 @@ Les cartes de forme autre que 1D ou 2D sont moins couramment utilisées, mais pe
 \label{fig:som1d}
 \end{figure}
 
-
-
 \subsection{Mémoire associative et SOM}
-
 
 \section{Architectures de cartes auto-organisatrices}
 \draft{
@@ -147,8 +152,21 @@ Certains travaux développent des cartes modulaires où les connexions entre car
 
 \section{Cartes auto-organisatrices récurrentes}
 
-%
-%
+On appelle réseaux récurrents des réseaux de neurones qui prennent en compte leur état précédent pour calculer leur état actuel. Ces réseaux sont utilisés pour le traitement et l'apprentissage de signaux temporels. Citons par exemple, en deep learning, les RNN (recurrent neural networks), dont les neurones recoivent leur état précédent en entrée. Les réseaux récurrents les plus utilisés actuellement sont les LSTM, dans lesquel un système de portes perment d'activer ou non des neurones en fonction des états précédents du réseau. Les cartes de Kohonen ont elles aussi des version récurrentes que nous allons présenter dans cette partie.
+
+Nous nous intéressons aux architectures multi-cartes, mais les cartes récurrentes répondent à des problèmes très similaire à ceux rencontrés dans la conception d'architectures de cartes pour faire de la mémoire associative. Dans une carte récurrente, le problème principal est de trouver comment communiquer à la carte de l'information sur son état précédent et comment utiliser cette information dans l'apprentissage de l'état courant. Cela rejoint la problématique posée dans les architectures de cartes de Kohonen, qui est de comment communiquer à une autre carte son état, afin de l'utiliser dans l'apprentissage de l'état courant. Nous avons vu précedemment qu'il existe assez peu de modèles d'architectures de cartes. Il existe plusieurs modèles de carte récurrentes qui nous permettrons de compléter cette étude. 
+
+Notre volonté de créer un modèle général d'architecture de cartes auto-organisatrice motive également le fait de s'intéresser aux cartes récurrentes. On souhaite en effet créer un modèle qui puisse unir cartes récurrentes et cartes normales au sein d'une même architecture. L'aspect bio-inspiré du modèle et son aspect multimodal ciblent plutot des applications d'un tel réseau en robotique. Or, la plupart des données traitées par des réseaux de neurones, en particulier dans les applications robotiques, sont temporelles : vidéos, signaux sonores, capteurs de position. Il est donc important de s'appuyer autant sur les modèles de cartes récurrentes existantes que sur les architectures afin de créer un modèle général. 
+
+%Enfin, les cartes de Kohonen ne se prêtent pas à un apprentissage en ligne de données en temps réel. En effet, il est nécessaires que les données d'entrées soient tirées aléatoirement dans l'espace à apprendre et ne suivent pas une trajectoire. Par exemple, si on veut apprendre des images, mais que les entrées sont données à la carte sous la forme d'une vidéo, les frames de la vidéo sont proches les unes des autres et forment donc une continuité dans l'espace d'entrée des images à apprendre. La carte va alors apprendre le sous ensemble de l'espace sur lequel se trouvent les premières frames, puis les oublier au fur et à mesure de l'apprentissage et les remplacer par les images qui suivent. Avec une architecture multi cartes qui prendrait en compte un aspect temporel, on pourrait imaginer la construction d'une architecture plus robuste.
+
+Nous avons classé les modèles de cartes récurrentes existants en différentes catégories. D'une part, certains modèles de cartes utilisent l'état précédent de la carte lors du calcul de l'activité de l'état courant. De l'autre, des modèles réutilisent plutot des élement de la carte précedente en tant qu'entrée de l'état courant.
+
+\subsection{Cartes récurrentes }
+
+TKM, RSOM, utilisation seulement de la zone autour du BMU
+
+\subsection{Réutilisation d'élements en entrées}
 %
 %\section{Contexte}
 %
